thread for calculating foreign keys(UI Responsiveness).  Also, now FKs in child 
tables are dropped before any parent tables are dropped when cascade 
constraints is selected.

SQLScripts Plugin: Now uses types generated by Hibernate dialects for create
table script feature.  Also, it now uses the session query tokenizer.  

Patch 1761706 (Miscellaneous Java 5 Generics) submitted by Bron Eubanks

Task 138098 (Plugins Session Menu Items (Disable)) When using a session that 
  is not supported by a db-specific plugin, that plugin should disable it's 
  Session menu items

Task 137959 (Refactor PreferencesManager) removed redundant plugin class 
  definitions related to Preferences which were very similar.

- Added unload button to plugin summary dialog which will cause the selected 
  plugin to be unloaded.
  
- Added support for setting whether or not plugins are loaded at startup 
  (without physically removing them), using the plugin summary dialog.  You must 
  restart SQuirreL for plugin change to take effect.
  
- Added 'Use PK' button on the "Edit Where clause" dialog which will cause only
  PK columns to be used for updating rows in the table contents panel.
- Added "All Objects" to alias properties.
- Use the last directory that a file was imported from when importing 
  additional files for binary fields.
  
1757076: (DATE column seen as TIMESTAMP, update in editable mode fails) Changed
the default of "Read Date as Timestamp" to false.  This setting breaks editing
dates on Derby.

1743720: (Save settings immediately, not only when closing SQuirreL).  Now there
is a setting in Global Preferences to "Save Preferences Immediately" (Default 
is true) Additionally, if this is not desired and it can be disabled to give the 
old behavior (faster), and a new menu item under "File" called "Save Preferences" 
is available to immediately save everything that is normally saved during 
shutdown.
