@@ -54,6 +54,9 @@ constraints is selected.
 SQLScripts Plugin: Now uses types generated by Hibernate dialects for create
 table script feature.  Also, it now uses the session query tokenizer.  
 
+Sybase Plugin: Added new trigger and index nodes beneath tables in the tree.  
+Also, added trigger source tab for triggers.
+
 Patch 1761706 (Miscellaneous Java 5 Generics) submitted by Bron Eubanks
 
 Task 138098 (Plugins Session Menu Items (Disable)) When using a session that 
